Fix z-index on demoday dropdowns

--- a/app/assets/stylesheets/pages/_demoday.scss
+++ b/app/assets/stylesheets/pages/_demoday.scss
@@ -135,7 +135,7 @@
   position: relative;
   margin: -33px auto 1em;
   max-width: 700px;
-  z-index: 10;
+  z-index: 1;
 
   @media (max-width: 620px) {
     flex-direction: column;
